tests/NormalTests/paczka1/fuzzy1/26867016.err
Error in line 3: xzKOrKdk S759 -1,4
Error in line 6: xzKOrKdkS7594,3
Error in line 10: 8Z7OjjYeY A607 12,3
Error in line 7: 9HGRJwP A607 17,8
Error in line 14: xzKOrKdk A607 11,8
Error in line 29: QANGyH S759 95,8
